Player List Fix
- Added a scrollbar for overflows
- Added a custom scrollbar to the root

--- a/client/src/pages/Home/Lobby/PlayerEntry/PlayerEntry.module.css
+++ b/client/src/pages/Home/Lobby/PlayerEntry/PlayerEntry.module.css
@@ -5,7 +5,7 @@
     align-items: center;
 
     background-color: var(--blue-3);
-    width: 100%;
+    width: 95%;
     aspect-ratio: 10/1;
 
     border-color: black;
